Fix details page alignment

--- a/staticfiles/recipes/style.css
+++ b/staticfiles/recipes/style.css
@@ -7,9 +7,12 @@
 }
 
 #platypus-content {
+    margin: 40px;
+}
+
+#details-content {
     display: flex;
     position: relative;
-    margin: 40px;
 }
 
 #platypus-title-text {
@@ -22,21 +25,26 @@
     text-decoration: none;
 }
 
-#main_image {
+#main-image {
     flex: 1;
 }
 
-#main_image img {
+#main-image img {
     width: 100%;
 }
 
-#text_content {
+#text-content {
     padding-left: 30px;
     flex: 50%;
 }
 
+#text-content h1 {
+    margin-top: 0px;
+}
+
 body {
-    font-family: "Karma", sans-serif
+    font-family: "Karma", sans-serif;
+    background-color: beige;
 }
 
 li a {
